# cfp-monitor

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  app.py  pyproject.toml  run.py
.streamlit/: config.toml
docs/: README.md
docs/design/: customer-quality-summary.md  model-costs.md  roadmap-status.md  wbs-and-loe.md  worklog.md
docs/handoff-from-vps/: 00-INDEX.md
docs/operations/: windows-desktop-install.md
docs/voc/: Utility Global Conference List 2026.xlsx  VOC-MASTER.md
examples/: urls.txt
installer/: README.md  install.ps1
licenseproxy/: .env.example  OPERATIONS.md  README.md  __init__.py  admin.py  policy.py  server.py
scripts/: backup_licenses.sh  coverage_run.py  exec_report.py  launch_chrome_cdp.bat  launch_ui.bat  reconcile.py  run_batch.py  run_proxy.bat  run_scheduled.bat  vps_setup.sh
src/cfp_monitor/: __init__.py  aggregator.py  alerts.py  cdp.py  config.py  consolidate.py  coverage.py  crawler.py  customer_format.py  discovery.py  exec_report.py  export.py  extraction.py  fetch.py  filtering.py  goldset.py  keywords.py  licensing.py  markets.py  (+12 more)
tests/: run_all.py  test_aggregator.py  test_alerts.py  test_cdp_guard.py  test_coverage.py  test_customer_format.py  test_discovery.py  test_edition_guard.py  test_export.py  test_fetch.py  test_filtering.py  test_goldset.py  test_licensing.py  test_markets.py  test_markets_membership.py  test_past_date_gate.py  test_proxy_server.py  test_quality_gate.py  test_reconcile.py  test_report.py  test_review_edits.py  test_storage.py  test_tracks.py  test_uploads.py  test_url_hygiene.py
(+45 files in other folders)
